# CUDA

./: CMakeLists.txt
lab1/: Sprawozdanie.odt  main.cu  time_N.ipynb  time_blocks.ipynb  time_threads.ipynb  times_N.csv  times_blocks.csv  times_threads.csv
lab2/: CMakeLists.txt  Sprawozdanie.odt  matrixMulCUBLAS.cpp  matrixMultiplication.cu  time_N.ipynb  time_cublas.ipynb  time_threads.ipynb  times_CUBLAS.csv  times_N.csv  times_threads.csv
lab2/Common/: exception.h  helper_functions.h  helper_image.h  helper_string.h  helper_timer.h
lab3/: FD_2D_global.cu  FD_2D_shared.cu  FD_2D_texture_pad.cu  Sprawozdanie.odt  time.ipynb  time_N.ipynb  time_occupancy.ipynb  time_threads.ipynb  times.csv  times_N.csv  times_occupancy.csv  times_threads.csv
